fix nicknames brightness and contrast of colors in chat

--- a/src/public/stylesheets/chat.css
+++ b/src/public/stylesheets/chat.css
@@ -61,6 +61,7 @@ body iframe {
   font-weight: bold;
   margin-right: 10px;
   margin-left: 5px;
+  filter: contrast(0.5) brightness(1.3);
 }
 ul li {
   list-style-type: none;
